@@ -1,5 +1,6 @@
 procps-3.1.11 --> procps-3.1.12
 
+top: new Linux 2.6.0-test4 CPU stats shown
 top: multiple -p options work again
 top: fixed 4 GB wrap-around
 ps: comes with tests
